# netbrowse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
.rpm/: netbrowse.spec
src/: gui.rs  ipc.rs  main.rs
