[package]
name = "netbrowse"
version = "0.1.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A graphical frontend to avahi-browse"
documentation = "https://docs.rs/netbrowse"
readme = "README.md"
homepage = "https://github.com/ewpratten/netbrowse"
repository = "https://github.com/ewpratten/netbrowse"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "4.2.2"
colored = "2.0.0"
eframe = "0.21.3"
ipnet = "2.3.1"
thiserror = "1.0.30"
[package.metadata.rpm]
package = "netbrowse"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
netbrowse = { path = "/usr/bin/netbrowse" }
